ecmascript/parser/tests/test262-error-references/fail/7464b0dfc4974a48.module.js.stderr
error: Expected from, got ,
 --> $DIR/tests/test262-parser/fail/7464b0dfc4974a48.module.js:1:14
  |
1 | import * as b, a from 'a'
  |              ^

